[package]
name = "rocdoc"
version = "0.1.1"
authors = [
    "sminez <innes.andersonmorrison@gmail.com>",
    "mchlrhw <4028654+mchlrhw@users.noreply.github.com>"
]
license-file = "LICENSE"
repository = "https://github.com/sminez/roc"
documentation = "https://docs.rs/rocdoc"
readme = "README.md"
edition = "2018"
description = """
Command line rust documentation searching in the style of godoc
"""

[[bin]]
doc = false
name = "roc"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
select = "0.5.0"

[dev-dependencies]
test-case = "1.0"
